add /showrooms/map & mode
GET /showrooms/{id}
detail -> geo.coords.lat/lng

GET /showrooms?fields=geo
mode: id + geo.coords

GET /showrooms?fields=marker
id
name
type
category
address
city
country
geo.coords
